name:                uv-alert-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/koterpillar/uv-alert-server#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Kotlyarov
maintainer:          a@koterpillar.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , App
                     , Data
                     , Fetcher
                     , Pebble.Client
                     , Pebble.Types
                     , Pusher
                     , Server
                     , TZ
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , either
                     , ftphs
                     , MissingH
                     , mtl
                     , network-uri
                     , parsec
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , time
                     , timezone-olson
                     , timezone-olson-th
                     , timezone-series
                     , transformers
                     , vector
                     , wai
  default-language:    Haskell2010

executable uv-alert-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , uv-alert-server
                     , warp
  default-language:    Haskell2010

test-suite uv-alert-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , uv-alert-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/koterpillar/uv-alert-server
