name:                uv-alert-server
version:             0.1.0.0
synopsis:            Server for UV Alert application
description:         Please see README.md
homepage:            http://github.com/koterpillar/uv-alert-server#readme
license:             GPL-3
license-file:        LICENSE
author:              Alexey Kotlyarov
maintainer:          a@koterpillar.com
copyright:           2015 Alexey Kotlyarov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , App
                     , Fetcher
                     , Fetcher.Arpansa
                     , Fetcher.Arpansa.CharacterRecognizer
                     , Fetcher.Arpansa.Characters
                     , Fetcher.Arpansa.Base
                     , Fetcher.Base
                     , Fetcher.BOM
                     , Fetcher.EPA
                     , Fetcher.EPA.Cities
                     , Fetcher.JMA
                     , Fetcher.JMA.Cities
                     , Fetcher.HTTP
                     , Pebble.Client
                     , Pebble.Types
                     , Pusher
                     , Server
                     , Types
                     , Types.Config
                     , Types.Location
                     , Types.Location.Australia
                     , Types.Location.Japan
                     , Types.Location.USA
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , ftphs
                     , JuicyPixels
                     , http-client
                     , http-client-tls
                     , http-media
                     , lens
                     , lifted-base
                     , MissingH
                     , mtl
                     , network-uri
                     , parsec
                     , servant
                     , servant-client
                     , servant-server
                     , split
                     , text
                     , text-icu
                     , time
                     , timezone-olson
                     , timezone-olson-th
                     , timezone-series
                     , transformers
                     , vector
                     , wai
  default-language:    Haskell2010

executable uv-alert-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , uv-alert-server
                     , warp
  default-language:    Haskell2010

test-suite uv-alert-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , uv-alert-server
                     , aeson
                     , bytestring
                     , containers
                     , JuicyPixels
                     , hspec
                     , hspec-core
                     , hspec-discover
                     , hspec-wai
                     , hspec-wai-json
                     , lens
                     , mtl
                     , text
                     , time
                     , timezone-series
                     , transformers
                     , vector
                     , wai
  other-modules:       Images
                     , Integration.Base
                     , Integration.TestLocations
                     , Misc
                     , TestFetcher
                     , TestFetcherArpansa
                     , TestFetcherJMA
                     , TestTypes
                     , TestUtils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/koterpillar/uv-alert-server
