name:                uv-alert-server
version:             0.1.0.0
synopsis:            Server for UV Alert application
description:         Please see README.md
homepage:            http://github.com/koterpillar/uv-alert-server#readme
license:             GPL-3
license-file:        LICENSE
author:              Alexey Kotlyarov
maintainer:          a@koterpillar.com
copyright:           2015 Alexey Kotlyarov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , App
                     , Fetcher
                     , Fetcher.Australia.Arpansa
                     , Fetcher.Australia.BOM
                     , Fetcher.Australia.Common
                     , Fetcher.Base
                     , Fetcher.EPA
                     , Fetcher.EPA.Cities
                     , Fetcher.JMA
                     , Fetcher.JMA.Cities
                     , Server
                     , Types
                     , Types.Config
                     , Types.Location
                     , Types.Location.TimeZones
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , Decimal
                     , either
                     , ftphs
                     , JuicyPixels
                     , here
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-media
                     , lens
                     , lifted-base
                     , MissingH
                     , mtl
                     , network-uri
                     , parsec
                     , retry
                     , servant
                     , servant-server
                     , split
                     , text
                     , text-icu
                     , time
                     , timezone-olson
                     , timezone-olson-th
                     , timezone-series
                     , transformers
                     , vector
                     , wai
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable uv-alert-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , uv-alert-server
                     , warp
  default-language:    Haskell2010

test-suite uv-alert-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , uv-alert-server
                     , aeson
                     , bytestring
                     , containers
                     , JuicyPixels
                     , hspec
                     , hspec-core
                     , hspec-discover
                     , hspec-wai
                     , hspec-wai-json
                     , lens
                     , mtl
                     , QuickCheck
                     , servant-server
                     , text
                     , time
                     , timezone-series
                     , transformers
                     , vector
                     , wai
  other-modules:       Fetcher.JMASpec
                     , FetcherSpec
                     , Images
                     , Integration.Base
                     , Integration.ServerSpec
                     , Misc
                     , Types.LocationSpec
                     , TypesSpec
                     , UtilsSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

executable cities
  hs-source-dirs:      cities
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , extra
                     , here
                     , http-conduit
                     , retry
                     , text
                     , unordered-containers
                     , uri-encode
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/koterpillar/uv-alert-server
